--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "my-protfolio",
+  "name": "portfolio-template",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:My_Protfolio": "node dist/my-protfolio/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
